# desbordante-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  dev-docker-compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-and-publish.yaml  build.yaml  deploy.yaml  lint.yaml  run-code-quality-checks.yaml  run-linter-and-tests.yaml  run-linters.yaml  test.yaml
_app/db/: session.py
_app/dependencies/: __init__.py  dependencies.py
_app/domain/: router.py
_app/models/: __init__.py  links.py
_app/repository/: __init__.py  repository.py
_app/schemas/: schemas.py
app/: main.py  settings.py  worker.py
app/api/: __init__.py  dataset.py  ping.py  router.py  task.py
app/background_tasks/: dummy_task.py
app/config/: config.py
app/db/: __init__.py  annotations.py  models.py  session.py
app/dependencies/: dependencies.py
app/domain/: router.py
app/exceptions/: __init__.py  exceptions.py
app/models/: links.py  models.py
app/repository/: repository.py
app/schemas/: __init__.py  schemas.py
app/settings/: __init__.py  alembic.ini  celery_config.py  settings.py
app/tasks/: __init__.py
internal/: README.md  __init__.py
internal/domain/: README.md
internal/dto/: README.md
internal/infrastructure/: README.md
internal/repository/: README.md
internal/uow/: README.md  __init__.py  uow.py
internal/usecase/: README.md
migrations/: env.py  script.py.mako
migrations/versions/: 2025_03_11_0132-85b41c1a5432_initial_revision.py  2025_03_11_1800-7db414c9b3d4_.py  2025_03_11_2244-5bec74691db9_.py  2025_03_18_2049-215a112a3a74_.py  2025_03_25_1726-aca618599f26_.py  2025_03_25_2040-646790f56dc2_.py  2025_03_27_1103-85d6c79df790_.py  2025_03_27_1427-9eb101b46037_.py  2025_03_27_2315-8062abfea43d_.py  2025_04_25_0019-0fbc2d4b6575_.py  2025_04_28_1702-424b9ddf19fc_.py  2025_04_29_1909-8831566b1e4a_.py  2025_08_05_1906-6e133040e049_.py  2025_08_06_2051-f28fcbcb34a1_.py  2025_08_11_2257-2c6dfd86894e_.py  2025_08_18_1824-43c792ffabae_.py  2025_08_18_1843-e0dfc8e7f2e8_.py  2025_08_18_2105-e466f24f111f_.py  (+22 more)
scripts/: celery.sh  flower.sh  start.sh
src/: exceptions.py  logging.py  main.py
src/api/: constants.py  (+2 more)
tests/: conftest.py
(+965 files in other folders)
